--- a/css/projects.css
+++ b/css/projects.css
@@ -11,3 +11,8 @@
     justify-content: center;
     align-content: center;
 }
+
+.description {
+    color: white; 
+    font-family: 'Red Hat Display', sans-serif;
+}
